Sticky header. Modification for Browse Metadata: Move TOC to RHS and prevent TOC from scrolling off screen (#436).

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -10,6 +10,9 @@
 .navBar, .hcaHeader {
 	border-bottom: 1px solid var(--gray-light);
 	height: 60px;
+	position: sticky;
+	top: 0;
+	z-index: 10;
 }
 
 /* Header for all pages but the home page */
