--- a/src/components/metadata/metadata.module.css
+++ b/src/components/metadata/metadata.module.css
@@ -9,6 +9,10 @@
 	margin: 0 -16px;
 }
 
+.metadata > div {
+	margin-bottom: 24px;
+}
+
 /**
  * HCA specific breakpoint
  */
