--- a/src/components/metadata/metadataRow.module.css
+++ b/src/components/metadata/metadataRow.module.css
@@ -12,7 +12,7 @@
 	align-items: flex-start;
 	display: flex;
 	flex-direction: column;
-	padding: 0 16px 16px;
+	padding: 0 16px;
 	position: relative; /* Positions <MetadataReference> */
 	width: 100%;
 }
@@ -20,12 +20,6 @@
 /* Ungrouped metadata */
 .metadataRow.unGrouped {
 	background-color: transparent;
-}
-
-/* End of group */
-.metadataRow.groupEnd {
-	margin-bottom: 16px;
-	padding: 0 16px 0;
 }
 
 /**
@@ -36,11 +30,6 @@
 	/* Row */
 	.metadataRow {
 		padding: 0 8px;
-	}
-
-	/* End of group */
-	.metadataRow.groupEnd {
-		padding: 0 8px 0;
 	}
 }
 
